--- a/app/templates/management/add_user.html
+++ b/app/templates/management/add_user.html
@@ -1,6 +1,6 @@
 {% extends "layouts/basic.html" %}
 
-{%block header_title%}Invite User{%endblock%}
+{%block header_title%}Convite de Usuário{%endblock%}
 {%block header_actions%}<a href="{{url_for("main.users")}}" class="btn btn-sm">Usuários</a>{%endblock%}
 
 {%block content%}
