--- a/app/templates/management/tenant_users.html
+++ b/app/templates/management/tenant_users.html
@@ -44,7 +44,7 @@
                     <div class="overflow-hidden sm:rounded-md">
                           <div class="grid grid-cols-6 gap-6">
                                   <div class="col-span-6 sm:col-span-3">
-                                    <label for="roles" class="block text-sm font-medium mb-2">Roles</label>
+                                    <label for="roles" class="block text-sm font-medium mb-2">Funções</label>
                                     <select class="input-roles" style="width: 100%" name="roles[]" multiple="multiple"></select>
                                     <p class="font-medium text-xs mt-2">A função <b>Fornecedor</b> removerá quaisquer outras funções. Os fornecedores só têm acesso à página Questionário. Se a função de fornecedor for removida, eles perderão o acesso a todos os questionários!</p>
                                   </div>
