--- a/app/templates/management/tenants.html
+++ b/app/templates/management/tenants.html
@@ -91,7 +91,7 @@
     <h3 class="text-lg font-bold">Confirmar exclusão</h3>
     <p class="py-4">Tem certeza de que deseja excluir <b id="delete-tenant-body">?</b>? Você perderá todos os dados e o progresso do locatário.</p>
     <div class="modal-action">
-      <label id="delete-tenant-btn" data-id="" @click="deleteTenant;document.getElementById('delete-modal').checked = false;" class="btn btn-error">Yes, Excluir</label>
+      <label id="delete-tenant-btn" data-id="" @click="deleteTenant;document.getElementById('delete-modal').checked = false;" class="btn btn-error">Sim, Excluir</label>
     </div>
   </label>
 </label>
