--- a/app/templates/labels.html
+++ b/app/templates/labels.html
@@ -44,8 +44,8 @@
 			  <div class="px-4 py-5 sm:p-6">
 				<div class="grid grid-cols-6 gap-6">
 				  <div class="col-span-3 sm:col-span-3">
-					<label for="key" class="block text-sm font-medium ">Chave (e.g. política_rótulo_email_segurança)</label>
-					<input placeholder="Deve começar com política_rótulo_ (política_rótulo_suachave)" type="text" name="key" id="key" class="mt-3 border-2 block w-full rounded-md border-base-300 shadow-sm input-md">
+					<label for="key" class="block text-sm font-medium ">Chave (e.g. politica_rotulo_email_segurança)</label>
+					<input placeholder="Deve começar com politica_rotulo_ (politica_rotulo_suachave)" type="text" name="key" id="key" class="mt-3 border-2 block w-full rounded-md border-base-300 shadow-sm input-md">
 				  </div>
 				  <div class="col-span-3 sm:col-span-3">
 					<label for="value" class="block text-sm font-medium ">Valor (e.g. security@acme.org)</label>
@@ -81,8 +81,8 @@
   $(document).ready(function() {
     $(document).on('click', '.save-label-btn', function() {
         var key = $("#key").val();
-        if (key == null || key.length === 0 || !key.startsWith("policy_label_")){
-          toast("Forneça uma chave com o prefixo: politica_rótulo_<sua chave>","error")
+        if (key == null || key.length === 0 || !key.startsWith("politica_rotulo_")){
+          toast("Forneça uma chave com o prefixo: politica_rotulo_<sua chave>","error")
           return
         }
         var value = $("#value").val();
